--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -15,15 +15,16 @@
     z-index: 999;
     .bannerCaption{
         font-family: 'DejavuSans';
-        h1{
+        .sliderTitle{
             color: $color-secondary;
             margin: 0 auto;
-            font-size: 75px;
+            font-size: 60px;
             font-weight: 300;
         }
-        h4{
+        .sliderSubtitle{
+            font-family: "AvenirBook";
             color: $color-white;
-            font-size: 48px;
+            font-size: 40px;
             font-weight: 100;
             margin: 0 auto;
         }
@@ -40,8 +41,9 @@
         border: 2px solid $color-white;
         text-transform: uppercase;
         font-family: 'AvenirBook';
-        font-size: 25px;
+        font-size: 18px;
         border-radius: 0;
+        padding-top: 11px;
         span{
             color: $color-secondary;
             font-family: 'AvenirBlack';
@@ -60,10 +62,10 @@
     .carouselcaption {
         bottom: 0;
         .bannerCaption{
-            h1{
+            .sliderTitle{
                 font-size: 30px;
             }
-            h4{
+            .sliderSubtitle{
                 font-size: 20px;
             }
             p{
