added some feature and fix problem

--- a/src/scss/components/Banner.module.scss
+++ b/src/scss/components/Banner.module.scss
@@ -60,7 +60,7 @@
 
 @media all and (max-width: 441px){
     .carouselcaption {
-        bottom: 0;
+        // bottom: 0;
         .bannerCaption{
             .sliderTitle{
                 font-size: 30px;
