added link for webfont

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 
 @import "variables";
 @import "typography";
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap') preconnect; 
+// @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap') preconnect; 
 
 .hero-title-col {
   position: relative;
