--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,14 @@
 @import "typography";
 // @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap') preconnect; 
 
+@font-face {
+  font-family: 'revicons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(http://localhost:10005/_next/static/media/revicons.ff59b316.woff) format('woff2');
+  font-display: swap;
+}
+
 .hero-title-col {
   position: relative;
   &:after {
