--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,7 @@
   font-family: 'revicons';
   font-style: normal;
   font-weight: 400;
-  src: url(http://localhost:10005/_next/static/media/revicons.ff59b316.woff) format('woff2');
+  src: url(https://hf0ak2tn748admnnhp68zwih3.js.wpenginepowered.com/_next/static/media/revicons.ff59b316.woff) format('woff2');
   font-display: swap;
 }
 
