added page SEO setting

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,13 +4,13 @@
 @import "typography";
 // @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap') preconnect; 
 
-@font-face {
-  font-family: 'revicons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://hf0ak2tn748admnnhp68zwih3.js.wpenginepowered.com/_next/static/media/revicons.ff59b316.woff) format('woff2');
-  font-display: swap;
-}
+// @font-face {
+//   font-family: 'revicons';
+//   font-style: normal;
+//   font-weight: 400;
+//   src: url(https://hf0ak2tn748admnnhp68zwih3.js.wpenginepowered.com/_next/static/media/revicons.ff59b316.woff) format('woff2');
+//   font-display: swap;
+// }
 
 .hero-title-col {
   position: relative;
