added pwa error solve issue

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,6 +6,9 @@ $color-dark-gray: #1f1f1f;
 $color-light-gray: #f2f2f2;
 $color-mid-gray: #606060;
 
+// #f0b254
+
+
 @font-face {
     font-family: 'DejavuSans';
     src: url('dejavu-sans.book.ttf');
