--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,5 @@
 $color-primary: #12143a;
-$color-secondary: #f0b254;
+$color-secondary: #8F682E;
 $color-black: #12143a;
 $color-white: #fff;
 $color-dark-gray: #1f1f1f;
