--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,7 @@ button.react-multiple-carousel__arrow.react-multiple-carousel__arrow-right {
 }
 button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-right, button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-left  {
   font-size: 10px !important;
-  color: $color-secondary;
+  color: $color-orange;;
   width: 19px;
   display: block;
 }
@@ -21,7 +21,7 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-right, butto
     width: 70%;
     height: 3px;
     content: " ";
-    background-color: $color-secondary;
+    background-color: $color-orange;
     right: -30%;
     top: 25%;
   }
@@ -31,7 +31,7 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-right, butto
     width: 70%;
     height: 3px;
     content: " ";
-    background-color: $color-secondary;
+    background-color: $color-orange;;
     right: 105%;
     bottom: 28%;
   }
@@ -41,7 +41,7 @@ button.react-multiple-carousel__arrow svg.svg-inline--fa.fa-chevron-right, butto
 
     span {
       font-family: "AvenirBlack";
-      color: $color-secondary;
+      color:$color-orange;
       display: block;
       font-weight: 900;
     }
@@ -203,12 +203,12 @@ body {
   .carousel-indicators .active {
     width: 12px;
     height: 12px !important;
-    background-color: $color-secondary;
+    background-color: $color-orange;
     position: relative;
     top: -1px;
     opacity: 1;
     border: 5px solid transparent;
-    outline: 1px solid $color-secondary;
+    outline: 1px solid $color-orange;
   }
 }
 
@@ -287,12 +287,12 @@ body {
       width: 20%;
       height: 3px;
       content: " ";
-      background-color: $color-secondary;
+      background-color: $color-orange;
       left: -17%;
     }
     span {
       font-family: "AvenirBlack";
-      color: $color-secondary;
+      color: $color-orange;
     }
   }
 }
@@ -382,7 +382,7 @@ footer {
     a {
       display: block;
       text-decoration: none;
-      color: $color-white;
+      color: $color-white !important;
       font-family: "AvenirBook";
       font-size: 15px;
     }
