Slider image fixed

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1833,8 +1833,9 @@ p.testimonials-name {
   }
 
   .Banner_carouselcaption__NAlFf {
-    bottom: 0%;
-    z-index: 999;
+      bottom: 0%;
+      z-index: 999;
+      top: 50px;
   }
   .meeting_image {
       display: none;
