getStaticProps function added to page and component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1522,6 +1522,9 @@ p.testimonials-name {
   height: 100%!important;
   box-shadow: -1px -3px 12px -5px #000;
 }
+.Bc-Coquitlam .broker-coquitlam a svg {
+  width: 10px;
+}
 @media all and (max-width: 912px) {
   .currentRate .easy-application {
     background-size: auto;
