--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,13 +1,12 @@
 $color-primary: #12143a;
-$color-secondary: #8F682E;
-$color-orange: #f0b254;
+$color-secondary: #f0b254;
 $color-black: #12143a;
 $color-white: #fff;
 $color-dark-gray: #1f1f1f;
 $color-light-gray: #f2f2f2;
 $color-mid-gray: #606060;
 
-// 
+// $color-secondary: #8F682E;
 
 
 @font-face {
