--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -144,7 +144,7 @@ body {
     margin-left: 16px;
     text-decoration: none;
     color: $color-primary;
-    font-size: 14px;
+    font-size: 13px;
     border-bottom: 2px solid transparent;
     padding: 4px 0;
     position: relative;
@@ -762,6 +762,7 @@ footer {
   color: $color-secondary;
   line-height: 33px;
   margin-top: 11px;
+  height: 25px;
 }
 
 .contact-item h6 {
@@ -853,6 +854,56 @@ textarea#comment {
     border: 2px solid $color-primary;
   }
 }
+.button-apply{
+  button{
+    text-transform: uppercase;
+    border-radius: 0;
+    background-color: $color-primary;
+    border: 1px solid transparent;
+  }
+}
+.howto-application {
+  background-repeat: no-repeat;
+  // background-size: 120% 100%;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  position: relative;
+  padding: 0;
+  .overlay{
+    	background-color:  rgba(0,0,0,0.7);
+    	width: 100%;
+    	height: 100%;
+    	position: absolute;
+    	overflow: hidden;
+  }
+  input{
+    background-color: $color-white;
+  }
+  input[type=submit]{
+    background-color: #3587cb;
+    position: relative;
+    text-align: center;
+    margin: auto;
+    left: 0;
+    right: 0;
+    border: 1px solid transparent;
+    color: #fff;
+    padding: 10px 33px;
+    text-transform: uppercase;
+    margin-bottom: 50px;
+  }
+  h2{
+    margin-top: 50px;
+  }
+  h2, p{
+    color: $color-white;
+    z-index: 999;
+    position: relative;
+    text-align: center;
+  }
+}
+
 .blog-container {
   .blogImage {
     img {
