--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1966,7 +1966,7 @@ p.testimonials-name {
   height: 400px;
 }
 .slider-images > span {
-  position: inherit !important;
+  // position: inherit !important;
 }
 .flexability-slider .carouselcaption:before {
   left: -8px;
