fixed heading in location page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1606,6 +1606,9 @@ p.testimonials-name {
 .Bc-Coquitlam .broker-coquitlam span svg {
   width: 10px;
 }
+.location-tab-title{
+  font-size: 15px;
+}
 @media all and (max-width: 912px) {
   .Banner_carouselcaption__NAlFf {
     bottom: 5% !important;
