added new production build optimization

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -916,6 +916,7 @@ textarea#comment {
   }
   .card-title {
     cursor: pointer;
+    font-size: 1.2rem;
 
     &:hover {
       color: $color-secondary;
