added extra css on single blog page

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -950,7 +950,14 @@ textarea#comment {
     }
   }
 }
-
+.asim-post-meta{
+  font-size: 17px;
+  color: #8f8f8f;
+  font-weight: 600;
+  letter-spacing: 1px;
+  display: block;
+  padding-bottom: 20px;
+}
 .currentRate {
   .current-rate{
     position: relative;
